fixed editor setup